--- a/buttons.html
+++ b/buttons.html
@@ -40,10 +40,12 @@
     <a class="button" href="https://jmibo.neocities.org/"><img src="https://jmibo.neocities.org/assets/button.png"></a> 
     <a href="https://kpwu.neocities.org/" class="button"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a>
     <h2>other neat places</h2>
+    <a href="https://moondvsted.neocities.org/"><img src="https://f2.toyhou.se/file/f2-toyhou-se/images/47052159_rd5iWTFAMmQWrMr.gif"></a>
     <a href="https://telepoet.neocities.org/" class="button"><img src="https://telepoet.neocities.org/images/buttons/telepoet8831.gif" alt="TELEPOET"></a> 
-    <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"></a>
     <a href="https://nyanseong.neocities.org/" class="button"><img width="88" height="31" src="https://nyanseong.neocities.org/img/buttons/nyanseong-wink.png"></a>
     <a href="https://noodledesk.net/" class="button"><img src="https://noodledesk.net/index_images/noodlebutton.gif" alt="noodle desk"></a>
     <a href="https://www.bikobatanari.art/" class="button"><img src="https://www.bikobatanari.art/images/bikobatanari.gif" alt="bikobatanari"></a>
-    <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/website/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
+    <br>
+    <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"></a>
+    <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/website/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe>
     </div></body>
