added some doodles

--- a/doodles/people.html
+++ b/doodles/people.html
@@ -48,5 +48,7 @@
         <img src="/website/doodles/people/eh.jpg" alt="eh" style="width:100%;">
         <img src="/website/doodles/people/really.jpg" alt="really" style="width:100%;">
         <img src="/website/doodles/people/untitled.png" alt="untitled" style="width:100%;">
+        <img src="/website/doodles/people/float.png" alt="float" style="width:100%;">
+        <img src="/website/doodles/people/fear.png" alt="fear" style="width:100%;">
         </div>
     </body>
