--- a/words/concreto.html
+++ b/words/concreto.html
@@ -5,19 +5,19 @@
         a{color:#ffffff}
     </style></head>
     <body>
-        <figure><blockquote>
+        <p>
 
-            me   memo   memória   ria
-                                  ia
-            pha fálha palha lia   a
-            
-            ex xis iste tente ente 
-            porém insta tanta neo
+            me   memo   memória   ria<br>
+                                  ia<br>
+            pha fálha palha lia   a<br>
 
-            i  i  i  i  i  i  is
-            s  ss  sss  ss  s
+            ex xis iste tente ente<br>
+            porém insta tanta neo<br>
+
+            i  i  i  i  i  i  is<br>
+            s  ss  sss  ss  s<br>
             e—        não.
 
         <br><br><a href="/website/words">voltar</a>
 
-        </blockquote></figure></body>
+        </p></body>
