--- a/words/concreto.html
+++ b/words/concreto.html
@@ -5,7 +5,7 @@
         a{color:#ffffff}
     </style></head>
     <body>
-        <p>
+        <p><pre>
 
             me   memo   memória   ria<br>
                                   ia<br>
@@ -18,6 +18,6 @@
             s  ss  sss  ss  s<br>
             e—        não.
 
-        <br><br><a href="/website/words">voltar</a>
+        <br><a href="/website/words">voltar</a>
 
-        </p></body>
+        </pre></p></body>
