--- a/words.html
+++ b/words.html
@@ -24,21 +24,19 @@
             <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
-        <h1>words</h1>
-        <details><summary><a>texts in english</a></summary>
-        <ul>
-            <li><a href="/website/words/let-yourself-out">let yourself out (73 words)</a></li>
-            <li><a href="/website/words/these-two">these two (62 words)</a></li>
-        </ul>
-        </details>
-        <details><summary><a>texts in toki pona (nimi mute pi toki pona)</a></summary>
+        <h1>words <span style="font-weight:normal">nimi mute</span></h1>
+        <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
         <ul>
             <li><a href="/website/words/sona-pini">sona pini (nimi 124)</a></li>
             <li><a href="/website/words/ona">ona (nimi 41)</a></li>
             <li><a href="/website/words/tomo-ni">tomo ni (nimi 115)</a></li>
             <li><a href="/website/words/suno">suno (nimi 218)</a></li>
-            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
             <li><a href="/website/words/jan">jan (nimi 332)</a></li>
+        </ul>
+        </details>
+        <details><summary><a>stories <span style="font-weight:normal">lipu lon</span></a></summary>
+        <ul>
+            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
             <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
         </ul></details>
     </div></body>
