--- a/words.html
+++ b/words.html
@@ -25,18 +25,26 @@
         </div></nav>
         <div class="main">
         <h1>words <span style="font-weight:normal">nimi mute</span></h1>
+        <details><summary><a>about <span style="font-weight:normal">tan</span></a></summary>
+            <p>mi pali e nimi mute ni lon tenpo pini.<br>
+                tenpo la ona li toki e ijo lon, tenpo ante la ona li musi li pilin.<br>
+                ale la, mi wile e ni: ona li pona tawa sina. o lukin pona.<br>
+                mi pali e nimi mute lon toki pona tan ni:<br>
+                ona li musi li pona tawa mi; ona li toki lon e pilin mi tawa mi.<br>
+                mi o pali e nimi mute sin a</p>
+            </details>
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
         <ul>
-            <li><a href="/website/words/sona-pini">sona pini (nimi 124)</a></li>
-            <li><a href="/website/words/ona">ona (nimi 41)</a></li>
-            <li><a href="/website/words/tomo-ni">tomo ni (nimi 115)</a></li>
-            <li><a href="/website/words/suno">suno (nimi 218)</a></li>
-            <li><a href="/website/words/jan">jan (nimi 332)</a></li>
+            <li><a href="/website/words/sona-pini">sona pini <span style="font-weight:normal">(nimi 124)</span></a></li>
+            <li><a href="/website/words/ona">ona <span style="font-weight:normal">(nimi 41)</span></a></li>
+            <li><a href="/website/words/tomo-ni">tomo ni <span style="font-weight:normal">(nimi 115)</span></a></li>
+            <li><a href="/website/words/suno">suno <span style="font-weight:normal">(nimi 218)</span></a></li>
+            <li><a href="/website/words/jan">jan <span style="font-weight:normal">(nimi 332)</span></a></li>
         </ul>
         </details>
         <details><summary><a>stories <span style="font-weight:normal">lipu lon</span></a></summary>
         <ul>
-            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
-            <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
+            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
+            <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
         </ul></details>
     </div></body>
