--- a/words.html
+++ b/words.html
@@ -6,6 +6,7 @@
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         summary{font-size: x-large}
+        ul{margin-top:0px}
         </style> 
     </head>
         <body><nav><div style="margin: 20px">
@@ -25,8 +26,9 @@
         </div></nav>
         <div class="main">
         <h1>words <span style="font-weight:normal">nimi mute</span></h1>
+        <br>
         <details><summary><a>about <span style="font-weight:normal">tan</span></a></summary>
-            <p>mi pali e nimi mute ni lon tenpo pini.<br>
+            <p style="max-width:750px; margin-top: 0px">mi pali e nimi mute ni lon tenpo pini.<br>
                 tenpo la ona li toki e ijo lon, tenpo ante la ona li musi li pilin.<br>
                 ale la, mi wile e ni: ona li pona tawa sina. o lukin pona.<br>
                 mi pali e nimi mute lon toki pona tan ni:<br>
