--- a/words.html
+++ b/words.html
@@ -37,16 +37,16 @@
             </details>
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
         <ul>
-            <li><a href="/website/words/sona-pini">sona pini <span style="font-weight:normal; text-decoration: none;">(nimi 124)</span></a></li>
-            <li><a href="/website/words/ona">ona <span style="font-weight:normal; text-decoration: none;">(nimi 41)</span></a></li>
-            <li><a href="/website/words/tomo-ni">tomo ni <span style="font-weight:normal; text-decoration: none;">(nimi 115)</span></a></li>
-            <li><a href="/website/words/suno">suno <span style="font-weight:normal; text-decoration: none;">(nimi 218)</span></a></li>
-            <li><a href="/website/words/jan">jan <span style="font-weight:normal; text-decoration: none;">(nimi 332)</span></a></li>
+            <li><a href="/website/words/sona-pini">sona pini <span style="font-weight:normal">(nimi 124)</span></a></li>
+            <li><a href="/website/words/ona">ona <span style="font-weight:normal">(nimi 41)</span></a></li>
+            <li><a href="/website/words/tomo-ni">tomo ni <span style="font-weight:normal">(nimi 115)</span></a></li>
+            <li><a href="/website/words/suno">suno <span style="font-weight:normal">(nimi 218)</span></a></li>
+            <li><a href="/website/words/jan">jan <span style="font-weight:normal">(nimi 332)</span></a></li>
         </ul>
         </details>
         <details><summary><a>stories <span style="font-weight:normal">lipu lon</span></a></summary>
         <ul>
-            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal; text-decoration: none;">(nimi 647)</span></a></li>
-            <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal; text-decoration: none;">(nimi 860)</span></a></li>
+            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
+            <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
         </ul></details>
     </div></body>
