--- a/words.html
+++ b/words.html
@@ -7,6 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         summary{font-size: x-large}
         ul{margin-top:0px}
+        .small{font-weight: normal; text-decoration-thickness: 1px}
         </style> 
     </head>
         <body><nav><div style="margin: 20px">
@@ -37,11 +38,11 @@
             </details>
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
         <ul>
-            <li><a href="/website/words/sona-pini">sona pini <span style="font-weight:normal">(nimi 124)</span></a></li>
-            <li><a href="/website/words/ona">ona <span style="font-weight:normal">(nimi 41)</span></a></li>
-            <li><a href="/website/words/tomo-ni">tomo ni <span style="font-weight:normal">(nimi 115)</span></a></li>
-            <li><a href="/website/words/suno">suno <span style="font-weight:normal">(nimi 218)</span></a></li>
-            <li><a href="/website/words/jan">jan <span style="font-weight:normal">(nimi 332)</span></a></li>
+            <li><a href="/website/words/sona-pini">sona pini <span class="small">(nimi 124)</span></a></li>
+            <li><a href="/website/words/ona">ona <span class="small">(nimi 41)</span></a></li>
+            <li><a href="/website/words/tomo-ni">tomo ni <span class="small">(nimi 115)</span></a></li>
+            <li><a href="/website/words/suno">suno <span class="small">(nimi 218)</span></a></li>
+            <li><a href="/website/words/jan">jan <span class="small">(nimi 332)</span></a></li>
         </ul>
         </details>
         <details><summary><a>stories <span style="font-weight:normal">lipu lon</span></a></summary>
