--- a/doodles/people.html
+++ b/doodles/people.html
@@ -41,6 +41,7 @@
         <img src="/website/doodles/people/guy.jpg" alt="guy" style="width:100%;">
         <img src="/website/doodles/people/aslep.jpg" alt="aslep" style="width:100%;">
         <img src="/website/doodles/people/aww.jpg" alt="aww" style="width:100%;">
+        <img src="/website/doodles/people/aww.png" alt="aww2" style="width:100%;">
         <img src="/website/doodles/people/faces.jpg" alt="faces" style="width:100%;">
         <img src="/website/doodles/people/hmm.jpg" alt="hmm" style="width:100%;">
         <img src="/website/doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
