--- a/words/concreto.html
+++ b/words/concreto.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <title>words: jan</title>
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap" rel="stylesheet">
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap');
+        </style> 
     <body><nav><div style="margin: 20px">
         <a href="/website">home</a><br>
         <br>
@@ -22,7 +26,7 @@
     </div></nav>
     <div class="main">
         <h1>concreto</h1>
-        <p style="padding: 10px"><pre>
+        <pre style="padding: 10px; font-size: larger; font-family: 'Noto Sans Mono', monospace; line-height: 1">
 
             me   memo   memória   ria<br>
                                   ia<br>
@@ -35,6 +39,5 @@
             s  ss  sss  ss  s<br>
             e—         não.
         </pre>
-        </p>
     </div>
     </body>
