--- a/words/concreto.html
+++ b/words/concreto.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>words: jan</title>
+        <title>words: concreto</title>
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap" rel="stylesheet">
         <style>
