--- a/words.html
+++ b/words.html
@@ -43,6 +43,7 @@
             <li><a href="/website/words/tomo-ni">tomo ni <span class="small">(nimi 115)</span></a></li>
             <li><a href="/website/words/suno">suno <span class="small">(nimi 218)</span></a></li>
             <li><a href="/website/words/jan">jan <span class="small">(nimi 332)</span></a></li>
+            <li><a href="/website/words/jan">concreto <span class="small">(nimi 8)</span></a></li>
         </ul>
         </details>
         <details><summary><a>stories <span style="font-weight:normal">lipu lon</span></a></summary>
