--- a/words.html
+++ b/words.html
@@ -33,7 +33,8 @@
                 tenpo la ona li toki e ijo lon, tenpo ante la ona li musi li pilin.<br>
                 ale la, mi wile e ni: ona li pona tawa sina. o lukin pona.<br>
                 mi pali e nimi mute lon toki pona tan ni:<br>
-                ona li musi li pona tawa mi; ona li toki lon e pilin mi tawa mi.<br>
+                ona li musi li pona tawa mi; ona li toki lon e pilin mi tawa mi.
+                taso, mi pali e nimi mute lon toki ante kin. ona li ken musi kin.<br>
                 mi o pali e nimi mute sin a</p>
             </details>
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
