--- a/words.html
+++ b/words.html
@@ -34,7 +34,7 @@
                 ale la, mi wile e ni: ona li pona tawa sina. o lukin pona.<br>
                 mi pali e nimi mute lon toki pona tan ni:<br>
                 ona li musi li pona tawa mi; ona li toki lon e pilin mi tawa mi.<br>
-                taso, mi pali e nimi mute lon toki ante kin. ona li ken musi kin.<br>
+                taso, mi pali e nimi mute wan lon toki ante kin.<br>
                 mi o pali e nimi mute sin a</p>
             </details>
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
