--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -28,6 +28,7 @@
         <div>Why do songs keep getting stuck in my head...</div>
         <div>Hate only brings you hate.</div>
         <div>being good feels good.</div>
+        <div>"est. 2022" that's gonna sound marginally cool in a couple months</div>
         <div>I don't know if adding that guestbook was a good idea</div>
         <div>It feels cozy down here.</div>
         <div>Thoughts are nice, calm and collected.</div>
