--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
     Also: they/them, pt-br, en, tok, <18yo</p>
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><p style="font-size:xx-large">
-        <a href="/website/about">about</a> . <a href="/website/musicians">musicians</a> . <a href="/website/websites" class="websites">websites</a><br>
-        <a href="/website/words" class="words">words</a> . <a href="/website/blender">blender</a> . <a href="/website/doodles" class="i">doodles</a> . <a href="/website/misc" class="misc">misc</a><br>
-        <a href="/website/buttons" class="buttons">buttons</a> . <a href="/website/sitelog" class="log">sitelog</a>
+        <a href="/website/about" title="me and what i like to do">about</a> . 
+        <a href="/website/musicians" title="good music people">musicians</a> . 
+        <a href="/website/websites" title="cool websites" class="websites">websites</a><br>
+        <a href="/website/words" title="poems and texts and things" class="words">words</a> . 
+        <a href="/website/blender" title="3d renders in blender">blender</a> . 
+        <a href="/website/doodles" title="stuff i drew" class="i">doodles</a> . 
+        <a href="/website/misc" title="general miscellanea" class="misc">misc</a><br>
+        <a href="/website/buttons" title="other folks' sites" class="buttons">buttons</a> . 
+        <a href="/website/sitelog" title="what's changed" class="log">sitelog</a>
     </p></body>
