--- a/words.html
+++ b/words.html
@@ -47,7 +47,7 @@
             <li><a href="/website/words/concreto">concreto <span class="small">(nimi 8)</span></a></li>
         </ul>
         </details>
-        <details><summary><a>stories <span style="font-weight:normal">lipu lon</span></a></summary>
+        <details><summary><a>longer texts <span style="font-weight:normal">lipu suli</span></a></summary>
         <ul>
             <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
             <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
