--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <details><summary>more info</summary>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
-    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
-    Also: they/them, pt-br, en, tok, <18yo</p>
-    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><p style="font-size:xx-large">
+    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br></p>
+    </details><p style="font-size:xx-large">
         <a href="/website/about" title="me and what i like to do">about</a> . 
         <a href="/website/musicians" title="good music people">musicians</a> . 
         <a href="/website/websites" title="cool websites" class="websites">websites</a><br>
