--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <body>
     <h1>cvni81's website</h1>
     <details><summary>more info</summary>
-    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
-    Making this website has been really fun, and i hope you like having a gander at it.<br>
-    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br></p>
+    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
+    I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at.<br>
+    Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br></p>
     </details><p style="font-size:xx-large">
         <a href="/website/about" title="me and what i like to do">about</a> . 
         <a href="/website/musicians" title="good music people">musicians</a> . 
