--- a/about.html
+++ b/about.html
@@ -32,6 +32,8 @@
     (<a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
+    Regarding gender, i'm non-binary! I go mainly by they/them.
+    And i'm pretty sure i have OCD. And maybe other things too.
     Favorite passtimes include: </p>
     <ul style="margin: 0px">
         <li>Chatting in Discord;</li>
@@ -41,5 +43,5 @@
         <li><a href="/website/doodles" class="small">Doodling things</a>;</li>
         <li>Seeing new places and taking photos of them.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
-    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure. And i'm pretty sure i have OCD.</p>
+    If you want to contact me, do it through discord (@cvni81#4837) or email (cvni1981@gmail.com)!</p>
     </div></body>
