--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
     Regarding gender, i'm non-binary! I go mainly by they/them.
     And i'm pretty sure i have OCD. And maybe other things too.
-    Favorite passtimes include: </p>
+    Favorite pastimes include: </p>
     <ul style="margin: 0px">
         <li>Chatting in Discord;</li>
         <li>Listening to <a href="/website/musicians" class="small">music</a>;</li>
