--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
     (<a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
-    Regarding gender, i'm non-binary! I go mainly by they/them.
-    And i'm pretty sure i have OCD. And maybe other things too.
+    Regarding gender, i'm kinda confused. I'm non-biney ig. I go mainly by they/them.<br>
+    And i'm pretty sure i have OCD. And maybe other things too.<br>
     Favorite pastimes include: </p>
     <ul style="margin: 0px">
         <li>Chatting in Discord;</li>
@@ -43,5 +43,5 @@
         <li><a href="/website/doodles" class="small">Doodling things</a>;</li>
         <li>Seeing new places and taking photos of them.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
-    If you want to contact me, do it through discord (@cvni81#4837) or email (cvni1981@gmail.com)!</p>
+    For contact: discord (@cvni81#4837) or email (cvni1981@gmail.com)</p>
     </div></body>
