--- a/about.html
+++ b/about.html
@@ -40,8 +40,7 @@
         <li>Listening to <a href="/website/musicians" class="small">music</a>;</li>
         <li>Working on this website;</li>
         <li>Composing stuffs in Beepbox;</li>
-        <li><a href="/website/doodles" class="small">Doodling things</a>;</li>
-        <li>Seeing new places and taking photos of them.</li></ul>
+        <li><a href="/website/doodles" class="small">Doodling things</a>.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
     For contact: discord (@cvni81#4837) or email (cvni1981@gmail.com)</p>
     </div></body>
