--- a/misc/folder.html
+++ b/misc/folder.html
@@ -14,8 +14,22 @@
 
     <h1>folder</h1>
     <p>You open the folder.</p>
+    <details>
+        <summary><a>index</a></summary>
+        <ul>
+            <li><a href="/website/misc/folder/index">index</a>: an earlier version of the start page with a sidebar and descriptions for pages.</li>
+            <details>
+                <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
+                    and move the contact and other info to the "about me" page.</summary>
+                    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
+                    Making this website has been really fun, and i hope you like having a gander at it.<br>
+                    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
+                    Also: they/them, pt-br, en, tok, <18yo</p>
+                    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
+            </details>
+        </ul>
+    </details>
 
-    > <a href="/website/misc/folder/index">index</a>: an earlier version of the start page.<br>
     <details>
         <summary><a>handdrawn/doodle</a></summary>
         When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
@@ -32,10 +46,24 @@
             <li><a href="/website/misc/folder/etc_button.jpg">etc (the culprit)</a></li>
         </ul>
     </details>
-    > <a href="/website/misc/folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.<br>
-    > <a href="/website/misc/folder/hi">hi</a>: hi<br>
-    > <a href="/website/misc/folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.<br>
-    > <a href="/website/misc/folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.<br>
-    > <a href="/website/misc/folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.<br>
+
+    <details>
+        <summary><a>miscellaneous pages</a></summary>
+        <ul>
+            <li><a href="/website/misc/folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
+            <li><a href="/website/misc/folder/hi">hi</a>: hi</li>
+            <li><a href="/website/misc/folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
+        </ul>
+    </details>
+
+    <details>
+        <summary><a>miscellaneous images</a></summary>
+        <ul>
+            <li><a href="/website/misc/folder/dingus.png">dingus</a>: i wanted to put this in the about me page, but i don't think it's gonna work with the current layout. Might add it in later.</li>
+            <li><a href="/website/misc/folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
+            <li><a href="/website/misc/folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
+        </ul>
+    </details>
+
     <br>> <a href="/website/misc">go back</a>
     </body>
