--- a/misc/folder.html
+++ b/misc/folder.html
@@ -8,7 +8,9 @@
     <style>
         details{max-width: 750px;
         border-left: solid #15c405 3px;
-        padding: 0 13px}
+        padding: 0 13px;
+        margin: 10px 0px}
+        ul{margin: 0px}
     </style></head>
     <body>
 
@@ -18,16 +20,16 @@
         <summary><a>index</a></summary>
         <ul>
             <li><a href="/website/misc/folder/index">index</a>: an earlier version of the start page with a sidebar and descriptions for pages.</li>
-            <details>
-                <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
-                    and move the contact and other info to the "about me" page.</summary>
-                    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
-                    Making this website has been really fun, and i hope you like having a gander at it.<br>
-                    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
-                    Also: they/them, pt-br, en, tok, <18yo</p>
-                    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
-            </details>
         </ul>
+        <details>
+            <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
+                and move the contact and other info to the "about me" page.</summary>
+                <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
+                Making this website has been really fun, and i hope you like having a gander at it.<br>
+                This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
+                Also: they/them, pt-br, en, tok, <18yo</p>
+                <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
+        </details>
     </details>
 
     <details>
