--- a/misc/folder.html
+++ b/misc/folder.html
@@ -11,6 +11,7 @@
         padding: 0 13px;
         margin: 10px 0px}
         ul{margin: 0px}
+        details details{margin-left: 10px}
     </style></head>
     <body>
 
