--- a/sitelog.html
+++ b/sitelog.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>sitelog</title>
         <link href="/website/styles/logstyle.css" rel="stylesheet" type="text/css" media="all"><style>
