--- a/sitelog.html
+++ b/sitelog.html
@@ -7,6 +7,7 @@
         <title>sitelog</title>
         <link href="/website/styles/logstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             #statuscafe{margin-top: 20px; margin-bottom: 30px; border-left: solid #ffa900 2px; padding-left: 8px}
+            #statuscafe-username{margin-bottom: 8px}
             #statuscafe-content{max-width: 726px; padding-left: 16px}
             #entry{margin-bottom: 40px}
             h2{font-size: large}
