--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -30,6 +30,7 @@
         <div>being good feels good.</div>
         <div>"est. 2022" that's gonna sound marginally cool in a couple months</div>
         <div>I don't know if adding that guestbook was a good idea</div>
+        <div>Nothing compared to the world.</div>
         <div>It feels cozy down here.</div>
         <div>Thoughts are nice, calm and collected.</div>
         <div>We absolutely mustn't tolerate behaviour like such from such an... IGGGNOMINNNNNIOUS INDIVVVVIDUALL!!</div>
