--- a/colors/red.html
+++ b/colors/red.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>colors: red</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
+        <link href="/website/styles/colorstyle.css" rel="stylesheet" type="text/css" media="all">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,700;1,400&display=swap');
+            body{background-color: #400000;}
+        </style> 
     <body><nav><div style="margin: 20px">
         <a href="/website">home</a><br>
         <br>
@@ -41,13 +44,13 @@
             neolithic period, made up by crushing insects of the Kermes genus, and it was
             used in luxury clothes all over 14th century Europe.
             <br>
-            <br>Another notable red pigment is the one from the Paubrasilia tree, once found all 
+            <br>Another notable red pigment is the one from the <i>Paubrasilia</i> tree, once found all 
             over the coast of South America, and the Portuguese colonists gave it the name 
-            Pau-Brasil (pau meaning wood and brasil meaning amber-like, kinda like "blazing"
+            <i>Pau-Brasil</i> (<i>pau</i> meaning wood and <i>brasil</i> meaning amber-like, kinda like "blazing"
             ). And it quickly grew popular (and rare!) as it was in high demand during the 
             Renaissance. 
             <br>
-            In fact, the name Pau-Brasil gave the country they found it in its name!
+            In fact, the name <i>Pau-Brasil</i> gave the country they found it in its name!
             But they over-harvested the tree and didn't really replant it; nowadays it's a
             very endangered species.
             <br>
