--- a/words.html
+++ b/words.html
@@ -49,6 +49,7 @@
         </details>
         <details><summary><a>longer texts <span style="font-weight:normal">lipu suli</span></a></summary>
         <ul>
+            <li><a href="/website/words/originalidade">originalidade <span style="font-weight:normal">(nimi 997)</span></a></li>
             <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
             <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
         </ul></details>
