--- a/about.html
+++ b/about.html
@@ -27,20 +27,23 @@
         </div></nav>
     <div class="main">
     <h1>about me</h1>
+    <b>cvni81</b>
+    <ul>
+        <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
+        <li><b>pronouns:</b> they/he</li>
+        <li><b>age:</b> under 18</li>
+        <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, working on this website, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
+    </ul>
+
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
     (<a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
-    Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
+    Over time, i've had a bunch of neat interests, like collecting old coins, looking at lots of pretty flags, fonts or designs in general,
+    researching a bunch about something for no reason, and probably a bunch more things i've probably forgotten.
+    I've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
-    Regarding gender, i'm kinda confused. I'm non-biney ig. I go mainly by they/them.<br>
-    And i'm pretty sure i have OCD. And maybe other things too.<br>
-    Favorite pastimes include: </p>
-    <ul style="margin: 0px">
-        <li>Chatting in Discord;</li>
-        <li>Listening to <a href="/website/musicians" class="small">music</a>;</li>
-        <li>Working on this website;</li>
-        <li>Composing stuffs in Beepbox;</li>
-        <li><a href="/website/doodles" class="small">Doodling things</a>.</li></ul>
-    <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
+    Regarding gender, i'm kinda confused. I just... don't feel like i'm a guy for some reason. Gender's just... weird.<br>
+    So i suppose i'm non-biney! Use they/them just to be sure but he/him works ig<br>
+    And i'm pretty sure i have OCD. And maybe other things too, but don't worry about it.<br>
     For contact: discord (@cvni81#4837) or email (cvni1981@gmail.com)</p>
     </div></body>
