--- a/about.html
+++ b/about.html
@@ -27,13 +27,14 @@
         </div></nav>
     <div class="main">
     <h1>about me</h1>
-    <b>cvni81</b>
+    <div>
+    <b style="text-align: center">cvni81</b>
     <ul>
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
         <li><b>pronouns:</b> they/he</li>
         <li><b>age:</b> under 18</li>
         <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, working on this website, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
-    </ul>
+    </ul><img src="/website/misc/folder/dingus.png" alt="dingus" style="margin-right: 50px; float: right;"></div>
 
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
