--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
         </div></nav>
     <div class="main">
     <h1>about me</h1>
-    <div>
-    <b style="text-align: center">cvni81</b><img src="/website/misc/folder/dingus.png" alt="dingus" style="margin-right: 50px; float: right;">
-    <ul>
+    <div style="padding-left: 50px;margin-top: 20px">
+    <b>cvni81</b><img src="/website/misc/folder/dingus.png" alt="dingus" style="margin-right: 50px; margin-top: 20px; float: right;">
+    <ul style="margin-top: 0px">
         <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
         <li><b>pronouns:</b> they/he</li>
         <li><b>age:</b> under 18</li>
