--- a/sitelog.html
+++ b/sitelog.html
@@ -36,6 +36,9 @@
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>and that's it enjoy the sitelog ig</p>
         <div id="entry" style="margin-bottom: 25px; margin-top: 25px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>9/11/2022 22:13</h2>
+        <p>Added a section to the about me page with some quick info... about me</p>   
+    </div><div id="entry">
         <h2>25/10/2022 15:58</h2>
         <p>Changed the intro page to be more simplistic and removed the sidebar.</p>    
     </div><div id="entry">
