--- a/words.html
+++ b/words.html
@@ -39,6 +39,7 @@
             </details>
         <details><summary><a>poems <span style="font-weight:normal">lipu musi</span></a></summary>
         <ul>
+            <li><a href="/website/words/vento">vento <span class="small">(152 pal.)</span></a></li>
             <li><a href="/website/words/sona-pini">sona pini <span class="small">(nimi 124)</span></a></li>
             <li><a href="/website/words/ona">ona <span class="small">(nimi 41)</span></a></li>
             <li><a href="/website/words/tomo-ni">tomo ni <span class="small">(nimi 115)</span></a></li>
