--- a/words/vento.html
+++ b/words/vento.html
@@ -22,7 +22,7 @@
     </div></nav>
         <div class="main">
 
-        <h1>ona</h1>
+        <h1>vento</h1>
         <p style="padding: 10px">
             Numa manhã fria.
             <br>Saio dos meus aposentos em rumo ao meu colégio.
