--- a/words/vento.html
+++ b/words/vento.html
@@ -39,9 +39,9 @@
             <br>Muitas vezes não me lembro dos anos passados.
             <br>Há um muro, longo e complicado, entre mim e a juventude.
             <br>Repleto de tijolos e cimento,
-            <br>construídos por alguém que não se sabe.
+            <br>construído por alguém que não se sabe.
             <br>Branco e interminável em ambas as direções.
-            <br>Ele me faz esqueçer.
+            <br>Ele me faz esquecer.
             <br>
             <br>O objetivo atual é estudar.
             <br>E sempre foi pelos últimos...
