--- a/misc/folder/slash.html
+++ b/misc/folder/slash.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head><style>
-    @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
     body{
         background-color: #080808;
-        font-family: 'Work Sans', sans-serif;
+        font-family: 'Inter', sans-serif;
         padding-left: 70px}
-    a{color: #f0f0f0}
+    a{color: #808080}
     </style></head>
     <body>
-        <p style="font-size: 70px">
-        <span style="color: #f02222">/</span>
-        <span style="color: #ffb400">/</span>
-        <span style="color: #15c405">/</span>
-        <span style="color: #05a1fc">/</span>
-        <span style="color: #0f008a">/</span>
-        <span style="color: #fc074c">/</span>
+        <p style="font-size: 150px">
+        <span style="color: #f02222; margin: -35px">/</span>
+        <span style="color: #ffb400; margin: -35px">/</span>
+        <span style="color: #15c405; margin: -35px">/</span>
+        <span style="color: #05a1fc; margin: -35px">/</span>
+        <span style="color: #0f008a; margin: -35px">/</span>
+        <span style="color: #fc074c; margin: -35px">/</span>
         </p>
 
         <br><br><br><br><br><br><a href="/website/misc/folder">go back</a>
