--- a/misc/folder/hi.html
+++ b/misc/folder/hi.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><style>
+    <head><title>hi</title><style>
     @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap');
     body{
         background-color: #6701c7;
