--- a/misc/folder/slash.html
+++ b/misc/folder/slash.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><style>
+    <head><title>slash</title><style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
     body{
         background-color: #080808;
