--- a/index.html
+++ b/index.html
@@ -35,4 +35,5 @@
         <a href="/website/misc" title="general miscellanea" class="misc">misc</a><br>
         <a href="/website/buttons" title="other folks' sites" class="buttons">buttons</a> . 
         <a href="/website/sitelog" title="what's changed" class="log">sitelog</a>
-    </p></body>
+    </p>
+    <img src="/website/misc/folder/dots.png" alt=" "></body>
