--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -13,7 +13,7 @@
         img{border: solid #080808 3px}
         .header{border: solid 0px}
         #drawings{line-height:0;column-count: 3; column-gap:3px}
-        #drawings img{margin-bottom: -3px;}
+        #drawings img{margin-bottom: -3px; width: 100%}
         #drawings img:hover{width:150%}
         .main{width: 100%; padding-top: 20px}
     </style>
@@ -38,19 +38,19 @@
         <div class="main">
         <img src="/website/doodles/etcheader.gif" alt="etc" style="height:120px; margin-bottom:20px" class="header"><br>
         <div id="drawings" style="width:650px; margin-top:20px">
-        <img src="/website/doodles/etc/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
-        <img src="/website/doodles/etc/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
-        <img src="/website/doodles/etc/et.jpg" alt="et" style="width:100%;">
-        <img src="/website/doodles/etc/graphite.jpg" alt="graphite" style="width:100%;">
-        <img src="/website/doodles/etc/hypercube.jpg" alt="hypercube" style="width:100%;">
-        <img src="/website/doodles/etc/mobius.jpg" alt="mobius" style="width:100%;">
-        <img src="/website/doodles/etc/waveform.jpg" alt="waveform" style="width:100%;">
-        <img src="/website/doodles/etc/new.jpg" alt="new" style="width:100%;">
-        <img src="/website/doodles/etc/new2.jpg" alt="new2" style="width:100%;">
-        <img src="/website/doodles/etc/new3.jpg" alt="new3" style="width:100%;">
-        <img src="/website/doodles/etc/creature.jpg" alt="creature" style="width:100%;">
-        <img src="/website/doodles/etc/creature2.jpg" alt="creature2" style="width:100%;">
-        <img src="/website/doodles/etc/square.jpg" alt="square" style="width:100%;">
-        <img src="/website/doodles/etc/creature3.png" alt="creature3" style="width:100%;">
+        <img src="/website/doodles/etc/cat_doodles.jpg" alt="cat doodles">
+        <img src="/website/doodles/etc/cat_spotlight.jpg" alt="cat spotlight">
+        <img src="/website/doodles/etc/et.jpg" alt="et">
+        <img src="/website/doodles/etc/graphite.jpg" alt="graphite">
+        <img src="/website/doodles/etc/hypercube.jpg" alt="hypercube">
+        <img src="/website/doodles/etc/mobius.jpg" alt="mobius">
+        <img src="/website/doodles/etc/waveform.jpg" alt="waveform">
+        <img src="/website/doodles/etc/new.jpg" alt="new">
+        <img src="/website/doodles/etc/new2.jpg" alt="new2">
+        <img src="/website/doodles/etc/new3.jpg" alt="new3">
+        <img src="/website/doodles/etc/creature.jpg" alt="creature">
+        <img src="/website/doodles/etc/creature2.jpg" alt="creature2">
+        <img src="/website/doodles/etc/square.jpg" alt="square">
+        <img src="/website/doodles/etc/creature3.png" alt="creature3">
         </div>
     </body>
