--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -14,7 +14,7 @@
         .header{border: solid 0px}
         #drawings{line-height:0;column-count: 3; column-gap:3px}
         #drawings img{margin-bottom: -3px; width: 100%}
-        #drawings img:hover{width:150%}
+        #drawings img:hover{transform: scale(150%);}
         .main{width: 100%; padding-top: 20px}
     </style>
     </head>
