--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -13,8 +13,8 @@
         img{border: solid #080808 3px}
         .header{border: solid 0px}
         #drawings{line-height:0;column-count: 3; column-gap:3px}
-        #drawings img{margin-bottom: -2px; width: 100%}
-        #drawings img:hover{transform: scale(125%)}
+        #drawings img{margin-bottom: -3px; width: 100%}
+        #drawings img:hover{transform: scale(125%); margin-top: -2px}
         .main{width: 100%; padding-top: 20px}
     </style>
     </head>
