--- a/doodles/people.html
+++ b/doodles/people.html
@@ -13,7 +13,8 @@
         img{border: solid #080808 3px}
         .header{border: solid 0px}
         #drawings{line-height:0;column-count: 3; column-gap:3px}
-        #drawings img{margin-bottom: -3px;}
+        #drawings img{margin-bottom: -3px; width: 100%}
+        #drawings img:hover{transform: scale(125%)}
         .main{width: 100%; padding-top: 20px}
     </style>
     </head>
@@ -37,19 +38,19 @@
         <div class="main">
         <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
         <div id="drawings" style="width:650px; margin-top:20px">
-        <img src="/website/doodles/people/annoyed.jpg" alt="annoyed" style="width:100%;">
-        <img src="/website/doodles/people/guy.jpg" alt="guy" style="width:100%;">
-        <img src="/website/doodles/people/aslep.jpg" alt="aslep" style="width:100%;">
-        <img src="/website/doodles/people/aww.jpg" alt="aww" style="width:100%;">
-        <img src="/website/doodles/people/aww.png" alt="aww2" style="width:100%;">
-        <img src="/website/doodles/people/faces.jpg" alt="faces" style="width:100%;">
-        <img src="/website/doodles/people/hmm.jpg" alt="hmm" style="width:100%;">
-        <img src="/website/doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
-        <img src="/website/doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
-        <img src="/website/doodles/people/eh.jpg" alt="eh" style="width:100%;">
-        <img src="/website/doodles/people/really.jpg" alt="really" style="width:100%;">
-        <img src="/website/doodles/people/untitled.png" alt="untitled" style="width:100%;">
-        <img src="/website/doodles/people/float.jpg" alt="float" style="width:100%;">
-        <img src="/website/doodles/people/fear.jpg" alt="fear" style="width:100%;">
+        <img src="/website/doodles/people/annoyed.jpg" alt="annoyed">
+        <img src="/website/doodles/people/guy.jpg" alt="guy">
+        <img src="/website/doodles/people/aslep.jpg" alt="aslep">
+        <img src="/website/doodles/people/aww.jpg" alt="aww">
+        <img src="/website/doodles/people/aww.png" alt="aww2">
+        <img src="/website/doodles/people/faces.jpg" alt="faces">
+        <img src="/website/doodles/people/hmm.jpg" alt="hmm">
+        <img src="/website/doodles/people/sitting.jpg" alt="sitting">
+        <img src="/website/doodles/people/stairs.jpg" alt="stairs">
+        <img src="/website/doodles/people/eh.jpg" alt="eh">
+        <img src="/website/doodles/people/really.jpg" alt="really">
+        <img src="/website/doodles/people/untitled.png" alt="untitled">
+        <img src="/website/doodles/people/float.jpg" alt="float">
+        <img src="/website/doodles/people/fear.jpg" alt="fear">
         </div>
     </body>
