--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -49,5 +49,6 @@
         <img src="/website/doodles/etc/creature2.jpg" alt="creature2">
         <img src="/website/doodles/etc/square.jpg" alt="square">
         <img src="/website/doodles/etc/creature3.png" alt="creature3">
+        <img src="/website/doodles/etc/creatures.jpg" alt="creatures">
         </div>
     </body>
