--- a/doodles/people.html
+++ b/doodles/people.html
@@ -49,5 +49,6 @@
         <img src="/website/doodles/people/untitled.png" alt="untitled">
         <img src="/website/doodles/people/float.jpg" alt="float">
         <img src="/website/doodles/people/fear.jpg" alt="fear">
+        <img src="/website/doodles/people/tall.jpg" alt="tallr">
         </div>
     </body>
